@@ -270,6 +270,13 @@ Release 2.7.0 - UNRELEASED
     HDFS-7683. Combine usages and percent stats in NameNode UI.
     (Vinayakumar B via wheat9)
 
+    HDFS-7675. Remove unused member DFSClient#spanReceiverHost (cmccabe)
+
+    HDFS-7603. The background replication queue initialization may not let
+    others run (kihwal)
+
+    HDFS-7706. Switch BlockManager logging to use slf4j. (wang)
+
   OPTIMIZATIONS
 
   BUG FIXES
